# C-Static-Analyzer-LLVM

./: .gitignore  CFGBuilder.cpp  CMakeLists.txt  Makefile  README.md  app.py  copy.cpp  temp.c  webinterface.py
benchmarks/: benchLoops.c  benchOptimizer.c  benchSecurity.c
